Polish follow/unfollow button

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -162,6 +162,12 @@ aside {
   }
 }
 
+.follow_button {
+  margin-bottom: 10px;
+  width: 135px;
+  font-size: 10px;
+}
+
 .user_avatars {
   overflow: auto;
   margin-top: 10px;
