--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(current_user.active_relationships.find_by(followed_id: @user.id),
              html: { method: :delete }, remote: true) do |f| %>
-  <%= f.submit "Unfollow", class: "btn" %>
+  <div class="follow_button">
+    <%= f.submit "Unfollow", class: "btn btn-outline-primary btn-sm" %>
+  </div>
 <% end %>
