Fix button style

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
         <%= @user.name %>
       </h1>
     </section>
-    <section class="follow_button">
+    <section style="float:left">
       <%= render 'follow_form' if logged_in? %>
     </section>
     <section class="stats">
