--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(current_user.active_relationships.build, remote: true) do |f| %>
   <div><%= hidden_field_tag :followed_id, @user.id %></div>
-  <div class="follow_button">
+  <div style="width:135px;">
     <%= f.submit "Follow", class: "btn btn-primary btn-sm" %>
   </div>
 <% end %>
