--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(current_user.active_relationships.find_by(followed_id: @user.id),
              html: { method: :delete }, remote: true) do |f| %>
-  <div class="follow_button">
+  <div style="width:135px;">
     <%= f.submit "Unfollow", class: "btn btn-outline-primary btn-sm" %>
   </div>
 <% end %>
